--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,5 +1,4 @@
-{{!-- The following component displays Ember's default welcome message. --}}
-{{welcome-page}}
-{{!-- Feel free to remove this! --}}
+<h1>Recursive Star Wars Info</h1>
+{{#link-to "index"}}Home{{/link-to}}
 
 {{outlet}}
