Basic Setup Finished

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,4 +1,7 @@
-<h1>Recursive Star Wars Info</h1>
-{{#link-to "index"}}Home{{/link-to}}
-
+<div class="head">
+  <h1>Recursive Star Wars Info</h1>
+  {{link-to "Home""index"}}
+</div>
+<div class="content">
 {{outlet}}
+</div>
