--- a/app/templates/components/people-component.hbs
+++ b/app/templates/components/people-component.hbs
@@ -1,3 +1,4 @@
+{{#link-to "people" person.id}}
 <div class="card person">
   <ul>
     <lh>{{person.name}}</lh>
@@ -10,3 +11,4 @@
     <li>Gender: {{person.gender}}</li>
   </ul>
 </div>
+{{/link-to}}
