--- a/app/templates/components/planets-component.hbs
+++ b/app/templates/components/planets-component.hbs
@@ -1,3 +1,4 @@
+{{#link-to "planets" planet.id}}
 <div class="card planet">
   <ul>
     <lh>{{planet.name}}</lh>
@@ -11,3 +12,4 @@
     <li>Surface Water: {{planet.surface_water}}%</li>
   </ul>
 </div>
+{{/link-to}}
