--- a/app/templates/components/species-component.hbs
+++ b/app/templates/components/species-component.hbs
@@ -1,3 +1,4 @@
+{{#link-to "species" species.id}}
 <div class="card species">
   <ul>
     <lh>{{species.name}}</lh>
@@ -11,3 +12,4 @@
     <li>Language: {{species.language}}</li>
   </ul>
 </div>
+{{/link-to}}
