--- a/app/templates/components/starships-component.hbs
+++ b/app/templates/components/starships-component.hbs
@@ -1,3 +1,4 @@
+{{#link-to "starships" starship.id}}
 <div class="card starship">
   <ul>
     <lh>{{starship.name}}</lh>
@@ -15,3 +16,4 @@
     <li>Consumables: {{starship.consumables}}</li>
     </ul>
 </div>
+{{/link-to}}
