--- a/app/templates/components/vehicles-component.hbs
+++ b/app/templates/components/vehicles-component.hbs
@@ -1,3 +1,4 @@
+{{#link-to "vehicles" vehicle.id}}
 <div class="card vehicle">
   <ul>
     <lh>{{vehicle.name}}</lh>
@@ -13,3 +14,4 @@
     <li>Consumables: {{vehicle.consumables}}</li>
   </ul>
 </div>
+{{/link-to}}
