--- a/app/templates/components/films-component.hbs
+++ b/app/templates/components/films-component.hbs
@@ -1,3 +1,4 @@
+{{#link-to "films" film.id}}
 <div class="card film">
   <ul>
     <lh>{{film.title}}</lh>
@@ -8,3 +9,4 @@
     <li>Release Date: {{film.release_date}}</li>
   </ul>
 </div>
+{{/link-to}}
