--- a/app/templates/components/starships-component.hbs
+++ b/app/templates/components/starships-component.hbs
@@ -1,3 +1,6 @@
+<div class="section starships">
+<h3>Starships</h3>
+{{#each starships as |starship|}}
 {{#link-to "starships" starship.id}}
 <div class="card starship">
   <ul>
@@ -17,3 +20,5 @@
     </ul>
 </div>
 {{/link-to}}
+{{else}}No Starships{{/each}}
+</div>
