--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -21,3 +21,16 @@ ul lh {
   width: 30vw;
   padding: 10px;
 }
+
+.head {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.head a {
+  margin: 10px 30px;
+}
+
+.search {
+}
