Dynamic Searchfield implemented

--- a/app/templates/components/people-component.hbs
+++ b/app/templates/components/people-component.hbs
@@ -1,5 +1,4 @@
-<div class="section people">
-<h3>People</h3>
+<div class="section-content">
 {{#each people as |person|}}
   {{#link-to "people" person.id}}
     <div class="card person">
