--- a/app/templates/components/planets-component.hbs
+++ b/app/templates/components/planets-component.hbs
@@ -1,5 +1,4 @@
-<div class="section planets">
-<h3>Planets</h3>
+<div class="section-content">
 {{#each planets as |planet|}}
   {{#link-to "planets" planet.id}}
     <div class="card planet">
