--- a/app/templates/components/species-component.hbs
+++ b/app/templates/components/species-component.hbs
@@ -1,5 +1,4 @@
-<div class="section species">
-<h3>Species</h3>
+<div class="section-content">
 {{#each species as |specie|}}
 {{#link-to "species" specie.id}}
 <div class="card specie">
