--- a/app/templates/components/vehicles-component.hbs
+++ b/app/templates/components/vehicles-component.hbs
@@ -1,5 +1,4 @@
-<div class="section vehicles">
-<h3>Vehicles</h3>
+<div class="section-content">
 {{#each vehicles as |vehicle|}}
 {{#link-to "vehicles" vehicle.id}}
 <div class="card vehicle">
