--- a/app/templates/components/starships-component.hbs
+++ b/app/templates/components/starships-component.hbs
@@ -1,5 +1,4 @@
-<div class="section starships">
-<h3>Starships</h3>
+<div class="section-content">
 {{#each starships as |starship|}}
 {{#link-to "starships" starship.id}}
 <div class="card starship">
