--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -2,8 +2,19 @@ html {
   font-family: sans-serif;
 }
 
+body {
+  height: 100vh;
+  background-image: url("https://upload.wikimedia.org/wikipedia/commons/6/62/Starsinthesky.jpg");
+  background-size: cover;
+  color: #ffffff;
+}
+
+h1 {
+ margin-bottom: 0;
+}
+
 a {
-  color: black;
+  color: #ffffff;
   text-decoration: none;
 }
 
@@ -11,20 +22,33 @@ ul lh {
   font-weight: bold;
 }
 
+.wrapper {
+  margin: 0 10vw;
+  background-color: #2c2c2c;
+  border-radius: 5px;
+}
+
 .head {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
 }
 
+.head h1 {
+  color: black;
+  -webkit-text-stroke: 2px #f4fd00;
+  font-size: 40pt;
+}
+
 .head a {
-  margin: 10px 30px;
+  margin: 0 30px;
 }
 
 .content {
   display: flex;
   flex-flow: column wrap;
+  min-height: 20vh;
 }
 
 .section > summary {
@@ -32,21 +56,28 @@ ul lh {
   margin: 20px;
   font-weight: bold;
   font-size: x-large;
+  cursor: pointer;
 }
 
 .section-content {
   display: flex;
   flex-flow: row wrap;
   justify-content: space-evenly;
-  width: 90vw;
   margin: 20px;
 }
 
 .card {
   padding: 10px;
+  max-width: 400px;
+  color: #ffffff;
 }
 
 .search {
-  position: absolute;
-  right: 5vw;
+  margin: 0 15vw 10px;
+}
+
+.checkboxes {
+  display: flex;
+  justify-content: space-evenly;
+  margin-bottom: 20px;
 }
