--- a/app/templates/search.hbs
+++ b/app/templates/search.hbs
@@ -1,8 +1,8 @@
 <div class="checkboxes">
-{{#each categoryWithSelected as |category|}}
+{{#each categorys as |category|}}
   <label>
-  <input type="checkbox" onclick={{action 'toggleCategory' category.name}} checked={{category.checked}}/>
-  {{category.name}}
+  <input type="checkbox" onclick={{action 'toggleCategory' category}} checked={{get this (to-lowercase category)}}/>
+  {{category}}
   </label>
 {{/each}}
 </div>
@@ -13,37 +13,37 @@
     {{#if people}}
     <details open class="filter people" id="filter-people">
       <summary>People Filter</summary>
-      {{filter-component filterCategorys=filters.people toggleFilter=(action "setFilter")}}
+      {{filter-component filterCategorys=filters.people toggleFilter=(action "toggleFilter")}}
     </details>
     {{/if}}
     {{#if starships}}
     <details class="filter starships" id="filter-starships">
       <summary>Starships Filter</summary>
-      {{filter-component filterCategorys=filters.starships toggleFilter=(action "setFilter")}}
+      {{filter-component filterCategorys=filters.starships toggleFilter=(action "toggleFilter")}}
     </details>
     {{/if}}
     {{#if vehicles}}
     <details class="filter vehicles" id="filter-vehicles">
       <summary>Vehicles Filter</summary>
-      {{filter-component filterCategorys=filters.vehicles toggleFilter=(action "setFilter")}}
+      {{filter-component filterCategorys=filters.vehicles toggleFilter=(action "toggleFilter")}}
     </details>
     {{/if}}
     {{#if species}}
     <details class="filter species" id="filter-species">
       <summary>Species Filter</summary>
-      {{filter-component filterCategorys=filters.species toggleFilter=(action "setFilter")}}
+      {{filter-component filterCategorys=filters.species toggleFilter=(action "toggleFilter")}}
     </details>
     {{/if}}
     {{#if planets}}
     <details class="filter planets" id="filter-planets">
       <summary>Planets Filter</summary>
-      {{filter-component filterCategorys=filters.planets toggleFilter=(action "setFilter")}}
+      {{filter-component filterCategorys=filters.planets toggleFilter=(action "toggleFilter")}}
     </details>
     {{/if}}
     {{#if films}}
     <details class="filter films" id="filter-films">
       <summary>Films Filter</summary>
-      {{filter-component filterCategorys=filters.films toggleFilter=(action "setFilter")}}
+      {{filter-component filterCategorys=filters.films toggleFilter=(action "toggleFilter")}}
     </details>
     {{/if}}
   </div>
@@ -54,42 +54,42 @@
 {{#if model.people}}
 <details open class="section people">
   <summary>People</summary>
-  {{people-component people=(unless activeFilters model.people filteredModel.people)}}
+  {{people-component people=filteredModel.people}}
 </details>
 {{/if}}
 
 {{#if model.starships}}
 <details class="section starships">
   <summary>Starships</summary>
-  {{starships-component starships=(unless activeFilters model.starships filteredModel.starships)}}
+  {{starships-component starships=filteredModel.starships}}
 </details>
 {{/if}}
 
 {{#if model.vehicles}}
 <details class="section vehicles">
   <summary>Vehicles</summary>
-  {{vehicles-component vehicles=(unless activeFilters model.vehicles filteredModel.vehicles)}}
+  {{vehicles-component vehicles=filteredModel.vehicles}}
 </details>
 {{/if}}
 
 {{#if model.species}}
 <details class="section species">
   <summary>Species</summary>
-  {{species-component species=(unless activeFilters model.species filteredModel.species)}}
+  {{species-component species=filteredModel.species}}
 </details>
 {{/if}}
 
 {{#if model.planets}}
 <details class="section planets">
   <summary>Planets</summary>
-    {{planets-component planets=(unless activeFilters model.planets filteredModel.planets)}}
+    {{planets-component planets=filteredModel.planets}}
 </details>
 {{/if}}
 
 {{#if model.films}}
 <details class="section films">
   <summary>Films</summary>
-  {{films-component films=(unless activeFilters model.films filteredModel.films)}}
+  {{films-component films=filteredModel.films}}
 </details>
 {{/if}}
 
