--- a/app/templates/search.hbs
+++ b/app/templates/search.hbs
@@ -13,37 +13,67 @@
     {{#if people}}
     <details class="filter people" id="filter-people">
       <summary>People Filter</summary>
-      {{filter-component filterCategorys=filters.people toggleFilter=(action "toggleFilter") selectType=(action "selectType") valChange=(action "valChange")}}
+      {{filter-component
+        filterCategorys=filters.people
+        queryParameter=queryParamFilters
+        toggleFilter=(action "toggleFilter")
+        selectType=(action "selectType")
+        valChange=(action "valChange")}}
     </details>
     {{/if}}
     {{#if starships}}
     <details class="filter starships" id="filter-starships">
       <summary>Starships Filter</summary>
-      {{filter-component filterCategorys=filters.starships toggleFilter=(action "toggleFilter") selectType=(action "selectType") valChange=(action "valChange")}}
+      {{filter-component
+        filterCategorys=filters.starships
+        queryParameter=queryParamFilters
+        toggleFilter=(action "toggleFilter")
+        selectType=(action "selectType")
+        valChange=(action "valChange")}}
     </details>
     {{/if}}
     {{#if vehicles}}
     <details class="filter vehicles" id="filter-vehicles">
       <summary>Vehicles Filter</summary>
-      {{filter-component filterCategorys=filters.vehicles toggleFilter=(action "toggleFilter") selectType=(action "selectType") valChange=(action "valChange")}}
+      {{filter-component
+        filterCategorys=filters.vehicles
+        queryParameter=queryParamFilters
+        toggleFilter=(action "toggleFilter")
+        selectType=(action "selectType")
+        valChange=(action "valChange")}}
     </details>
     {{/if}}
     {{#if species}}
     <details class="filter species" id="filter-species">
       <summary>Species Filter</summary>
-      {{filter-component filterCategorys=filters.species toggleFilter=(action "toggleFilter") selectType=(action "selectType") valChange=(action "valChange")}}
+      {{filter-component
+        filterCategorys=filters.species
+        queryParameter=queryParamFilters
+        toggleFilter=(action "toggleFilter")
+        selectType=(action "selectType")
+        valChange=(action "valChange")}}
     </details>
     {{/if}}
     {{#if planets}}
     <details class="filter planets" id="filter-planets">
       <summary>Planets Filter</summary>
-      {{filter-component filterCategorys=filters.planets toggleFilter=(action "toggleFilter") selectType=(action "selectType") valChange=(action "valChange")}}
+      {{filter-component
+        filterCategorys=filters.planets
+        queryParameter=queryParamFilters
+        toggleFilter=(action "toggleFilter")
+        selectType=(action "selectType")
+        valChange=(action "valChange")}}
     </details>
     {{/if}}
     {{#if films}}
     <details class="filter films" id="filter-films">
       <summary>Films Filter</summary>
-      {{filter-component filterCategorys=filters.films toggleFilter=(action "toggleFilter") selectType=(action "selectType") valChange=(action "valChange")}}
+      {{filter-component
+        filterCategorys=filters.films
+        queryParameter=queryParamFilters
+        toggleFilter=(action "toggleFilter")
+        selectType=(action "selectType")
+        valChange=(action "valChange")}}
     </details>
     {{/if}}
   </div>
@@ -92,4 +122,3 @@
   {{films-component films=filteredModel.films}}
 </details>
 {{/if}}
-
