refactored search into components

--- a/app/templates/components/filter-component.hbs
+++ b/app/templates/components/filter-component.hbs
@@ -17,9 +17,19 @@
           <div class="filter-input">
             <p>{{filter.name}}:</p>
             <select onchange={{action 'selectType' value="target.value"}}>
-              <option value="{{filter.name}}-gt" selected>&gt;</option>
-              <option value="{{filter.name}}-eq">=</option>
-              <option value="{{filter.name}}-lt">&lt;</option>
+              {{#if (eq filter.type 'gt')}}
+                <option value="{{filter.name}}-gt" selected>&gt;</option>
+                <option value="{{filter.name}}-eq">=</option>
+                <option value="{{filter.name}}-lt">&lt;</option>
+              {{else if (eq filter.type 'eq')}}
+                <option value="{{filter.name}}-gt">&gt;</option>
+                <option value="{{filter.name}}-eq" selected>=</option>
+                <option value="{{filter.name}}-lt">&lt;</option>
+              {{else}}
+                <option value="{{filter.name}}-gt">&gt;</option>
+                <option value="{{filter.name}}-eq">=</option>
+                <option value="{{filter.name}}-lt" selected>&lt;</option>
+              {{/if}}
             </select>
             {{input type="number" min=0 value=filter.value input=(action "valChange" (to-lowercase filter.name) filter.value)}}
           </div>
