--- a/app/templates/search.hbs
+++ b/app/templates/search.hbs
@@ -1,11 +1,4 @@
-<div class="checkboxes">
-{{#each categorys as |category|}}
-  <label>
-  <input type="checkbox" onclick={{action 'toggleCategory' category}} checked={{get this (to-lowercase category)}}/>
-  {{category}}
-  </label>
-{{/each}}
-</div>
+{{category-listing categories=categories toggle=(action "toggleCategory")}}
 
 <details class="filters">
   <summary>More Filter</summary>
@@ -15,7 +8,7 @@
       <summary>People Filter</summary>
       {{filter-component
         filterCategorys=filters.people
-        queryParameter=queryParamFilters
+        queryParameter=selectedFilters
         toggleFilter=(action "toggleFilter")
         selectType=(action "selectType")
         valChange=(action "valChange")}}
@@ -26,7 +19,7 @@
       <summary>Starships Filter</summary>
       {{filter-component
         filterCategorys=filters.starships
-        queryParameter=queryParamFilters
+        queryParameter=selectedFilters
         toggleFilter=(action "toggleFilter")
         selectType=(action "selectType")
         valChange=(action "valChange")}}
@@ -37,7 +30,7 @@
       <summary>Vehicles Filter</summary>
       {{filter-component
         filterCategorys=filters.vehicles
-        queryParameter=queryParamFilters
+        queryParameter=selectedFilters
         toggleFilter=(action "toggleFilter")
         selectType=(action "selectType")
         valChange=(action "valChange")}}
@@ -48,7 +41,7 @@
       <summary>Species Filter</summary>
       {{filter-component
         filterCategorys=filters.species
-        queryParameter=queryParamFilters
+        queryParameter=selectedFilters
         toggleFilter=(action "toggleFilter")
         selectType=(action "selectType")
         valChange=(action "valChange")}}
@@ -59,7 +52,7 @@
       <summary>Planets Filter</summary>
       {{filter-component
         filterCategorys=filters.planets
-        queryParameter=queryParamFilters
+        queryParameter=selectedFilters
         toggleFilter=(action "toggleFilter")
         selectType=(action "selectType")
         valChange=(action "valChange")}}
@@ -70,7 +63,7 @@
       <summary>Films Filter</summary>
       {{filter-component
         filterCategorys=filters.films
-        queryParameter=queryParamFilters
+        queryParameter=selectedFilters
         toggleFilter=(action "toggleFilter")
         selectType=(action "selectType")
         valChange=(action "valChange")}}
@@ -79,46 +72,14 @@
   </div>
 </details>
 
-<input value={{search}} onKeyUp={{action "handleSearch" value="target.value"}} placeholder="Search" class="search"/>
+<input
+  class="search"
+  value={{search}}
+  placeholder="Search"
+  onKeyUp={{action "handleSearch" value="target.value"}}>
 
-{{#if model.people}}
-<details open class="section people">
-  <summary>People</summary>
-  {{people-component people=filteredModel.people}}
-</details>
-{{/if}}
-
-{{#if model.starships}}
-<details class="section starships">
-  <summary>Starships</summary>
-  {{starships-component starships=filteredModel.starships}}
-</details>
-{{/if}}
-
-{{#if model.vehicles}}
-<details class="section vehicles">
-  <summary>Vehicles</summary>
-  {{vehicles-component vehicles=filteredModel.vehicles}}
-</details>
-{{/if}}
-
-{{#if model.species}}
-<details class="section species">
-  <summary>Species</summary>
-  {{species-component species=filteredModel.species}}
-</details>
-{{/if}}
-
-{{#if model.planets}}
-<details class="section planets">
-  <summary>Planets</summary>
-    {{planets-component planets=filteredModel.planets}}
-</details>
-{{/if}}
-
-{{#if model.films}}
-<details class="section films">
-  <summary>Films</summary>
-  {{films-component films=filteredModel.films}}
-</details>
-{{/if}}
+{{search-display
+  model=model
+  categories=categories
+  selectedFilters=selectedFilters
+  getFilterInfo=getFilterInfo}}
