--- a/app/templates/components/category-listing.hbs
+++ b/app/templates/components/category-listing.hbs
@@ -1,11 +1,12 @@
 <div class="checkboxes">
 {{#each-in categories as |category value|}}
   <label>
-  <input
-   type="checkbox"
-   onclick={{action 'toggleCategory' category}}
-   checked={{value}}/>
-  {{category}}
+    {{input
+      type='checkbox'
+      checked=value
+      placeholder=category
+      click=(action 'toggleCategory' category)}}
+    {{category}}
   </label>
 {{/each-in}}
 </div>
