--- a/app/templates/components/filter-component.hbs
+++ b/app/templates/components/filter-component.hbs
@@ -6,7 +6,7 @@
       <div class="filter-checkboxes">
       {{#each filters as |filter|}}
         <label>
-          <input type="checkbox" onclick={{action "toggleFilter" filter}} checked={{in-array queryParameter filter}}/>
+          {{input type='checkbox' click=(action "toggleFilter" filter) checked=(in-array queryParameter filter)}}
           {{filter}}
         </label>
       {{/each}}
@@ -17,19 +17,9 @@
           <div class="filter-input">
             <p>{{filter.name}}:</p>
             <select onchange={{action 'selectType' value="target.value"}}>
-              {{#if (eq filter.type 'gt')}}
-                <option value="{{filter.name}}-gt" selected>&gt;</option>
-                <option value="{{filter.name}}-eq">=</option>
-                <option value="{{filter.name}}-lt">&lt;</option>
-              {{else if (eq filter.type 'eq')}}
-                <option value="{{filter.name}}-gt">&gt;</option>
-                <option value="{{filter.name}}-eq" selected>=</option>
-                <option value="{{filter.name}}-lt">&lt;</option>
-              {{else}}
-                <option value="{{filter.name}}-gt">&gt;</option>
-                <option value="{{filter.name}}-eq">=</option>
-                <option value="{{filter.name}}-lt" selected>&lt;</option>
-              {{/if}}
+              <option value="{{filter.name}}-gt" selected={{eq filter.type 'gt'}}>&gt;</option>
+              <option value="{{filter.name}}-eq" selected={{eq filter.type 'eq'}}>=</option>
+              <option value="{{filter.name}}-lt" selected={{eq filter.type 'lt'}}>&lt;</option>
             </select>
             {{input type="number" min=0 value=filter.value input=(action "valChange" (to-lowercase filter.name) filter.value)}}
           </div>
