--- a/app/templates/search.hbs
+++ b/app/templates/search.hbs
@@ -72,11 +72,12 @@
   </div>
 </details>
 
-<input
+{{input
+  type="text"
   class="search"
-  value={{search}}
+  value=search
   placeholder="Search"
-  onKeyUp={{action "handleSearch" value="target.value"}}>
+  onKeyUp=(action "handleSearch" search)}}
 
 {{search-display
   model=model
