reopening class for tests and bug fix

--- a/app/templates/components/category-listing.hbs
+++ b/app/templates/components/category-listing.hbs
@@ -4,7 +4,7 @@
     {{input
       type='checkbox'
       checked=value
-      placeholder=category
+      data-test-category=category
       click=(action 'toggleCategory' category)}}
     {{category}}
   </label>
