--- a/app/templates/components/filter-component.hbs
+++ b/app/templates/components/filter-component.hbs
@@ -1,5 +1,5 @@
 <div class="filter-content">
-{{#each-in filterCategorys as |name filters|}}
+{{#each-in filterCategories as |name filters|}}
   <div class="filter-category">
     <p>{{name}}</p>
     {{#if (neq name "Numeric")}}
