--- a/app/templates/search.hbs
+++ b/app/templates/search.hbs
@@ -7,9 +7,8 @@
     <details class="filter people" id="filter-people">
       <summary>People Filter</summary>
       {{filter-component
-        filterCategories=filters
+        filterCategories=filters.people
         queryParameter=selectedFilters
-        name="people"
         toggleFilter=(action "toggleFilter")
         selectType=(action "selectType")
         valChange=(action "valChange")}}
@@ -19,9 +18,8 @@
     <details class="filter starships" id="filter-starships">
       <summary>Starships Filter</summary>
       {{filter-component
-        filterCategories=filters
+        filterCategories=filters.starships
         queryParameter=selectedFilters
-        name="starships"
         toggleFilter=(action "toggleFilter")
         selectType=(action "selectType")
         valChange=(action "valChange")}}
@@ -31,9 +29,8 @@
     <details class="filter vehicles" id="filter-vehicles">
       <summary>Vehicles Filter</summary>
       {{filter-component
-        filterCategories=filters
+        filterCategories=filters.vehicles
         queryParameter=selectedFilters
-        name="vehicles"
         toggleFilter=(action "toggleFilter")
         selectType=(action "selectType")
         valChange=(action "valChange")}}
@@ -43,9 +40,8 @@
     <details class="filter species" id="filter-species">
       <summary>Species Filter</summary>
       {{filter-component
-        filterCategories=filters
+        filterCategories=filters.species
         queryParameter=selectedFilters
-        name="species"
         toggleFilter=(action "toggleFilter")
         selectType=(action "selectType")
         valChange=(action "valChange")}}
@@ -55,9 +51,8 @@
     <details class="filter planets" id="filter-planets">
       <summary>Planets Filter</summary>
       {{filter-component
-        filterCategories=filters
+        filterCategories=filters.planets
         queryParameter=selectedFilters
-        name="planets"
         toggleFilter=(action "toggleFilter")
         selectType=(action "selectType")
         valChange=(action "valChange")}}
@@ -67,9 +62,8 @@
     <details class="filter films" id="filter-films">
       <summary>Films Filter</summary>
       {{filter-component
-        filterCategories=filters
+        filterCategories=filters.films
         queryParameter=selectedFilters
-        name="films"
         toggleFilter=(action "toggleFilter")
         selectType=(action "selectType")
         valChange=(action "valChange")}}
